--- a/DSA1_week4.ipynb
+++ b/DSA1_week4.ipynb
@@ -1,18 +1,4 @@
 {
-  "nbformat": 4,
-  "nbformat_minor": 0,
-  "metadata": {
-    "colab": {
-      "provenance": []
-    },
-    "kernelspec": {
-      "name": "python3",
-      "display_name": "Python 3"
-    },
-    "language_info": {
-      "name": "python"
-    }
-  },
   "cells": [
     {
       "cell_type": "code",
@@ -48,6 +34,11 @@
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "id": "nEuXDy2OftFH"
+      },
+      "outputs": [],
       "source": [
         "def binary_search(keys, query):\n",
         "    # write your code here\n",
@@ -74,15 +65,47 @@
         "\n",
         "    for q in input_queries:\n",
         "        print(binary_search(input_keys, q), end=' ')"
-      ],
-      "metadata": {
-        "id": "nEuXDy2OftFH"
-      },
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "# recursive method\n",
+        "def binary_search(arr, query, low, high):\n",
+        "    if high < low:\n",
+        "        return low - 1\n",
+        "\n",
+        "    mid = low + (high - low) // 2\n",
+        "\n",
+        "    if query == arr[mid]:\n",
+        "        return mid\n",
+        "    elif query < arr[mid]:\n",
+        "        return binary_search(arr, query, low, mid - 1)\n",
+        "    else:\n",
+        "        return binary_search(arr, query, mid + 1, high)\n",
+        "\n",
+        "if __name__ == \"__main__\":\n",
+        "    input_keys = list(map(int, input().split()))\n",
+        "    query_keys = list(map(int, input().split()))\n",
+        "    low = 0\n",
+        "    high = len(input_keys) - 1\n",
+        "    results = []\n",
+        "    for i in query_keys:\n",
+        "        result = binary_search(input_keys, i, low, high)\n",
+        "        results.append(str(result))\n",
+        "    print(' '.join(results))\n"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "id": "53L7XZaxftJP"
+      },
+      "outputs": [],
       "source": [
         "\"\"\"Task. Find the first occurence of an integer in the given sorted sequence of integers (possibly with duplicates).\n",
         "Input Format. The first two lines of the input contain an integer 𝑛 and a sequence 𝑎0 ≤ 𝑎1 ≤ · · · ≤ 𝑎𝑛−1\n",
@@ -103,15 +126,15 @@
         "9 4 5 2\n",
         "Output:\n",
         "6 1 -1 0\"\"\"\n"
-      ],
-      "metadata": {
-        "id": "53L7XZaxftJP"
-      },
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "id": "_alFuSIOftNJ"
+      },
+      "outputs": [],
       "source": [
         "def binary_search(keys, query):\n",
         "    # write your code here\n",
@@ -138,15 +161,15 @@
         "\n",
         "    for q in input_queries:\n",
         "        print(binary_search(input_keys, q), end=' ')"
-      ],
-      "metadata": {
-        "id": "_alFuSIOftNJ"
-      },
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "id": "O2nWIVc6ftbc"
+      },
+      "outputs": [],
       "source": [
         "\"\"\"Task. The goal in this code problem is to check whether an input sequence contains a majority element.\n",
         "Input Format. The first line contains an integer 𝑛, the next one contains a sequence of 𝑛 non-negative\n",
@@ -177,15 +200,15 @@
         "1 2 3 1\n",
         "Output:\n",
         "0\"\"\"\n"
-      ],
-      "metadata": {
-        "id": "O2nWIVc6ftbc"
-      },
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "id": "AZz7RuBnftfE"
+      },
+      "outputs": [],
       "source": [
         "class Solution:\n",
         "    def majorityElement(self, nums: List[int]) -> int:\n",
@@ -206,15 +229,15 @@
         "            return left if left_count > right_count else right \n",
         "            \n",
         "        return majorityelement_recursion(0,len(nums)-1)"
-      ],
-      "metadata": {
-        "id": "AZz7RuBnftfE"
-      },
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "id": "QBCDFNM7ftnX"
+      },
+      "outputs": [],
       "source": [
         "\"\"\"Task. To force the given implementation of the quick sort algorithm to efficiently process sequences with\n",
         "few unique elements, your goal is replace a 2-way partition with a 3-way partition. That is, your new\n",
@@ -231,15 +254,15 @@
         "2 3 9 2 2\n",
         "Output:\n",
         "2 2 2 3 9\"\"\""
-      ],
-      "metadata": {
-        "id": "QBCDFNM7ftnX"
-      },
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "id": "QG4-fudxft4q"
+      },
+      "outputs": [],
       "source": [
         "import random \n",
         "import sys \n",
@@ -275,26 +298,41 @@
         "    randomized_quicksort(a, 0, n - 1)\n",
         "    for x in a:\n",
         "        print(x, end=' ')"
-      ],
-      "metadata": {
-        "id": "QG4-fudxft4q"
-      },
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "#merge sort implementation "
-      ],
+      "execution_count": null,
       "metadata": {
         "id": "Ob_T4a_EkuaX"
       },
-      "execution_count": null,
-      "outputs": []
+      "outputs": [],
+      "source": [
+        "#merge sort implementation "
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": 1,
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "ZwSEL_z_kumm",
+        "outputId": "3b61265d-1214-4b5b-a4c3-27c9c6e67475"
+      },
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "Given array is\n",
+            "12 11 13 5 6 7 \n",
+            "Sorted array is: \n",
+            "5 6 7 11 12 13 \n"
+          ]
+        }
+      ],
       "source": [
         "def mergeSort(arr):\n",
         "\n",
@@ -337,27 +375,98 @@
         "\tmergeSort(arr)\n",
         "\tprint(\"Sorted array is: \", end=\"\\n\")\n",
         "\tprintList(arr)"
-      ],
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "ZwSEL_z_kumm",
-        "outputId": "3b61265d-1214-4b5b-a4c3-27c9c6e67475"
-      },
-      "execution_count": 1,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "Given array is\n",
-            "12 11 13 5 6 7 \n",
-            "Sorted array is: \n",
-            "5 6 7 11 12 13 \n"
-          ]
-        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "def selectionsort(arr):\n",
+        "    for i in range(len(arr)):\n",
+        "        min_index = i\n",
+        "        for j in range(i + 1, len(arr)):\n",
+        "            if arr[j] < arr[min_index]:\n",
+        "                min_index = j\n",
+        "        arr[i], arr[min_index] = arr[min_index], arr[i]\n",
+        "    return arr\n",
+        "\n",
+        "if __name__ == \"__main__\":\n",
+        "    input_keys = list(map(int, input().split()))\n",
+        "    print(selectionsort(input_keys))\n"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "def countingsort(arr):\n",
+        "    max_index = max(arr)\n",
+        "    count_list = [0] * (max_index + 1)\n",
+        "\n",
+        "    while len(arr) > 0:\n",
+        "        number = arr.pop(0)\n",
+        "        count_list[number] += 1\n",
+        "\n",
+        "    for i in range(len(count_list)):\n",
+        "        while count_list[i] > 0:\n",
+        "            arr.append(i)\n",
+        "            count_list[i] -= 1\n",
+        "\n",
+        "    return arr\n",
+        "\n",
+        "unsortedArr = [9, 8, 9, 4, 2, 2, 6, 3, 3, 1, 6, 5, 2, 3]\n",
+        "sortedArr = countingsort(unsortedArr)\n",
+        "print(\"Sorted array:\", sortedArr)\n"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "def partition(arr, low, high):\n",
+        "    pivot = arr[high]\n",
+        "    i = low - 1\n",
+        "\n",
+        "    for j in range(low, high):\n",
+        "        if arr[j] <= pivot:\n",
+        "            i += 1\n",
+        "            arr[i], arr[j] = arr[j], arr[i]\n",
+        "\n",
+        "    arr[i + 1], arr[high] = arr[high], arr[i + 1]\n",
+        "    return i + 1\n",
+        "\n",
+        "def quicksort(arr, low=0, high=None):\n",
+        "    if high is None:\n",
+        "        high = len(arr) - 1\n",
+        "    if low < high:\n",
+        "        partition_index = partition(arr, low, high)\n",
+        "        quicksort(arr, low, partition_index - 1)\n",
+        "        quicksort(arr, partition_index + 1, high)\n",
+        "\n",
+        "my_array = [64, 34, 25, 12, 22, 11, 90, 5]\n",
+        "quicksort(my_array)\n",
+        "print(\"Sorted array:\", my_array)"
       ]
     }
-  ]
+  ],
+  "metadata": {
+    "colab": {
+      "provenance": []
+    },
+    "kernelspec": {
+      "display_name": "Python 3",
+      "name": "python3"
+    },
+    "language_info": {
+      "name": "python"
+    }
+  },
+  "nbformat": 4,
+  "nbformat_minor": 0
 }
