doubly linked list

--- a/DSA1_week4.ipynb
+++ b/DSA1_week4.ipynb
@@ -399,9 +399,17 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 2,
       "metadata": {},
-      "outputs": [],
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "Sorted array: [1, 2, 2, 2, 3, 3, 3, 4, 5, 6, 6, 8, 9, 9]\n"
+          ]
+        }
+      ],
       "source": [
         "def countingsort(arr):\n",
         "    max_index = max(arr)\n",
@@ -425,9 +433,17 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 1,
       "metadata": {},
-      "outputs": [],
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "Sorted array: [5, 11, 12, 22, 25, 34, 64, 90]\n"
+          ]
+        }
+      ],
       "source": [
         "def partition(arr, low, high):\n",
         "    pivot = arr[high]\n",
@@ -453,6 +469,13 @@
         "quicksort(my_array)\n",
         "print(\"Sorted array:\", my_array)"
       ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": []
     }
   ],
   "metadata": {
@@ -464,7 +487,16 @@
       "name": "python3"
     },
     "language_info": {
-      "name": "python"
+      "codemirror_mode": {
+        "name": "ipython",
+        "version": 3
+      },
+      "file_extension": ".py",
+      "mimetype": "text/x-python",
+      "name": "python",
+      "nbconvert_exporter": "python",
+      "pygments_lexer": "ipython3",
+      "version": "3.11.5"
     }
   },
   "nbformat": 4,
